[tool.poetry]
name = "graphic_ext"
version = "0.2.2"
description = ""
authors = ["Vladimir Usatikov <vladimir@usatikov.com>"]

[tool.poetry.dependencies]
python = "^3.6"
PyQt5 = "^5.15.0"
#typing = "^3.7.4"

requests = "^2.25.1"
pyqtgraph = "^0.11.1"
pyopengl = "^3.1.5"
Pillow = "^8.4.0"
nptyping = "^1.4.4"
[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
