[tool.poetry]
name = "graphic_ext"
version = "0.4.11"
description = ""
authors = ["Vladimir Usatikov <vladimir@usatikov.com>"]

[tool.poetry.dependencies]
python = "^3.10"
#typing = "^3.7.4"

requests = "^2"
pyqtgraph = "^0"
pyopengl = "^3"
Pillow = "^8"
nptyping = "^1"
PyQt6 = "^6"
[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
